implement a naive version of graph coloring